--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,16 +24,8 @@ jobs:
       - name: Build Docker image
         run: docker build -t $DOCKER_IMAGE:${{ github.sha }} .
 
-      - name: Test - Verify nginx configuration
+      - name: Test nginx configuration
         run: docker run --rm --entrypoint nginx $DOCKER_IMAGE:${{ github.sha }} -t
-
-      - name: Test - Run basic health check
-        run: |
-          docker run -d --name test-container -p 8080:80 $DOCKER_IMAGE:${{ github.sha }}
-          sleep 5
-          curl -f http://localhost:8080/health || exit 1
-          docker stop test-container
-          docker rm test-container
 
       - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
