--- a/helm/tx-gateway/templates/configmap.yaml
+++ b/helm/tx-gateway/templates/configmap.yaml
@@ -7,8 +7,8 @@ metadata:
 data:
   default.conf: |
     server {
-      listen       80;
-      listen  [::]:80;
+      listen       {{ .Values.service.targetPort }};
+      listen  [::]:{{ .Values.service.targetPort }};
       server_name  localhost;
 
       # Default location
