--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,38 @@ env:
   DOCKER_IMAGE: aviorma/tx-gateway
 
 jobs:
+  terraform-validate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.0
+
+      - name: Terraform Format Check
+        run: terraform fmt -check -recursive
+        working-directory: ./infra
+
+      - name: Terraform Init
+        run: terraform init -backend=false
+        working-directory: ./infra
+
+      - name: Terraform Validate
+        run: terraform validate
+        working-directory: ./infra
+
+      - name: Validation Summary
+        run: |
+          echo "✅ Terraform validation successful"
+          echo "✅ Code formatting is correct"
+          echo "✅ Configuration is valid"
+
   build-test-push:
     runs-on: ubuntu-latest
+    needs: terraform-validate
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -67,24 +97,35 @@ jobs:
       #     cluster_name: tx-gateway-staging
       #     location: us-central1
 
-      - name: Deploy to Staging
+      - name: Validate Helm Chart
         run: |
-          # Dry-run for demonstration (remove --dry-run for real deployment)
-          helm upgrade --install tx-gateway ./helm/tx-gateway \
+          # Validate the Helm chart renders correctly
+          helm template tx-gateway ./helm/tx-gateway \
             --namespace tx-gateway-staging \
-            --create-namespace \
             --values ./helm/values/values-staging.yaml \
             --set image.repository=${{ env.DOCKER_IMAGE }} \
             --set image.tag=${{ github.sha }} \
-            --wait \
-            --timeout 5m \
-            --dry-run
+            --validate > /dev/null
+          echo "✅ Helm chart validation successful"
+
+      # Uncomment when deploying to real cluster:
+      # - name: Deploy to Staging
+      #   run: |
+      #     helm upgrade --install tx-gateway ./helm/tx-gateway \
+      #       --namespace tx-gateway-staging \
+      #       --create-namespace \
+      #       --values ./helm/values/values-staging.yaml \
+      #       --set image.repository=${{ env.DOCKER_IMAGE }} \
+      #       --set image.tag=${{ github.sha }} \
+      #       --wait \
+      #       --timeout 5m
 
       - name: Deployment Summary
         run: |
-          echo "✅ Staging deployment completed"
+          echo "✅ Staging deployment validated"
           echo "Image: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
           echo "Namespace: tx-gateway-staging"
+          echo "Note: Uncomment deployment step when cluster credentials are configured"
 
   deploy-prod:
     runs-on: ubuntu-latest
@@ -113,23 +154,34 @@ jobs:
       #     cluster_name: tx-gateway-production
       #     location: us-central1
 
-      - name: Deploy to Production
+      - name: Validate Helm Chart
         run: |
-          # Dry-run for demonstration (remove --dry-run for real deployment)
-          helm upgrade --install tx-gateway ./helm/tx-gateway \
+          # Validate the Helm chart renders correctly
+          helm template tx-gateway ./helm/tx-gateway \
             --namespace tx-gateway-prod \
-            --create-namespace \
             --values ./helm/values/values-production.yaml \
             --set image.repository=${{ env.DOCKER_IMAGE }} \
             --set image.tag=${{ github.ref_name }} \
-            --wait \
-            --timeout 10m \
-            --atomic \
-            --dry-run
+            --validate > /dev/null
+          echo "✅ Helm chart validation successful"
+
+      # Uncomment when deploying to real cluster:
+      # - name: Deploy to Production
+      #   run: |
+      #     helm upgrade --install tx-gateway ./helm/tx-gateway \
+      #       --namespace tx-gateway-prod \
+      #       --create-namespace \
+      #       --values ./helm/values/values-production.yaml \
+      #       --set image.repository=${{ env.DOCKER_IMAGE }} \
+      #       --set image.tag=${{ github.ref_name }} \
+      #       --wait \
+      #       --timeout 10m \
+      #       --atomic
 
       - name: Deployment Summary
         run: |
-          echo "✅ Production deployment completed"
+          echo "✅ Production deployment validated"
           echo "Version: ${{ github.ref_name }}"
           echo "Image: ${{ env.DOCKER_IMAGE }}:${{ github.ref_name }}"
           echo "Namespace: tx-gateway-prod"
+          echo "Note: Uncomment deployment step when cluster credentials are configured"
